update env file

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@
 PROJECT_TITLE = Asset Builder
 ZIP_FILE_NAME = assets
 
-FAVICON_IMAGE_NAME = favicon.png
+FAVICON_IMAGE_NAME = favicon.jpg
 FAVICON_TILE_COLOR = #e1861f
 FAVICON_THEME_COLOR = #ffffff
 
