--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "gulp-real-favicon": "^0.3.2",
         "gulp-rename": "^1.4.0",
         "gulp-sass": "^4.0.2",
+        "gulp-uglify": "^3.0.2",
         "gulp-zip": "^4.2.0"
     },
     "dependencies": {
