--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ JS_FILE_NAME_SUFFIX = min
 #   |-- js
 #   |-- sass
 
-DEVELOPMENT_FOLDER_NAME = development
+DEVELOPMENT_FOLDER_NAME = resources
 DEVELOPMENT_CSS_FOLDER_NAME = css
 DEVELOPMENT_FAVICON_FOLDER_NAME = favicon
 DEVELOPMENT_FONTS_FOLDER_NAME = fonts
