--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
         "gulp-rename": "^1.4.0",
         "gulp-sass": "^4.0.2",
         "gulp-uglify": "^3.0.2",
-        "gulp-zip": "^4.2.0"
+        "gulp-zip": "^4.2.0",
+        "minimist": "^1.2.0"
     },
     "dependencies": {
         "gulp-env-modify": "^1.0.8"
