--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ PROJECT_TITLE = Asset Builder
 ZIP_FILE_NAME = assets
 
 FAVICON_IMAGE_NAME = favicon.jpg
-FAVICON_TILE_COLOR = #e1861f
-FAVICON_THEME_COLOR = #ffffff
+FAVICON_TILE_COLOR = #123456
+FAVICON_THEME_COLOR = #987654
 
 CSS_FILE_NAME = app
 CSS_FILE_NAME_SUFFIX = min
