--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
         "gulp": "^4.0.0",
         "gulp-clean-css": "^4.0.0",
         "gulp-concat": "^2.6.1",
-        "gulp-filenames": "^4.0.1",
+        "gulp-filelist": "^1.1.1",
         "gulp-image": "^4.4.1",
         "gulp-real-favicon": "^0.3.2",
         "gulp-rename": "^1.4.0",
+        "gulp-replace": "^1.0.0",
         "gulp-sass": "^4.0.2",
         "gulp-uglify": "^3.0.2",
         "gulp-zip": "^4.2.0",
