--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "gulp-concat": "^2.6.1",
         "gulp-filelist": "^1.1.1",
         "gulp-image": "^4.4.1",
+        "gulp-notify": "^3.2.0",
         "gulp-real-favicon": "^0.3.2",
         "gulp-rename": "^1.4.0",
         "gulp-replace": "^1.0.0",
