--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 
 # Project
 PROJECT_TITLE = Asset Builder
-ZIP_FILE_NAME = assets
+ZIP_FILE_NAME = assets_builder
 
 FAVICON_IMAGE_NAME = favicon.jpg
 FAVICON_TILE_COLOR = #123456
@@ -13,6 +13,7 @@ CSS_FILE_NAME_SUFFIX = min
 JS_FILE_NAME = app
 JS_FILE_NAME_SUFFIX = min
 
+EXPORT_FOLDER_NAME = exports
 
 # Development Folder Structure:
 #
