--- a/package.json
+++ b/package.json
@@ -1,12 +1,34 @@
 {
-    "name": "asset-compiler",
+    "name": "asset-builder",
     "version": "0.1.0",
     "private": true,
+    "dependencies": {
+        "react": "^16.8.6",
+        "react-dom": "^16.8.6",
+        "react-scripts": "2.1.8"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not ie <= 11",
+        "not op_mini all"
+    ],
     "devDependencies": {
+        "bootstrap": "^4.3.1",
         "del": "^4.1.0",
         "gulp": "^4.0.0",
         "gulp-clean-css": "^4.0.0",
         "gulp-concat": "^2.6.1",
+        "gulp-env-modify": "^1.0.8",
         "gulp-filelist": "^1.1.1",
         "gulp-image": "^4.4.1",
         "gulp-notify": "^3.2.0",
@@ -17,8 +39,5 @@
         "gulp-uglify": "^3.0.2",
         "gulp-zip": "^4.2.0",
         "minimist": "^1.2.0"
-    },
-    "dependencies": {
-        "gulp-env-modify": "^1.0.8"
     }
 }
