--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 
 # Project
+PROJECT_AUTHOR = Your Name
+
 PROJECT_TITLE = Asset Builder
-ZIP_FILE_NAME = assets_builder
+ZIP_FILE_NAME = asset_builder
 
 FAVICON_IMAGE_NAME = favicon.jpg
 FAVICON_TILE_COLOR = #123456
@@ -14,6 +16,8 @@ JS_FILE_NAME = app
 JS_FILE_NAME_SUFFIX = min
 
 EXPORT_FOLDER_NAME = exports
+
+HTML_TEMPLATE_FILE_NAME = template
 
 # Development Folder Structure:
 #
