gulp watch added

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
 # Project
-PROJECT_AUTHOR = Your Name
+PROJECT_AUTHOR = brian tweed
 
 PROJECT_TITLE = Asset Builder
 ZIP_FILE_NAME = asset_builder
