--- a/package.json
+++ b/package.json
@@ -3,15 +3,13 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "express": "^4.16.4",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-scripts": "2.1.8"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "start": "node server.js"
     },
     "eslintConfig": {
         "extends": "react-app"
