--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "dependencies": {
         "express": "^4.16.4",
+        "gulp-tap": "^1.0.1",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-scripts": "2.1.8"
