--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     ],
     "devDependencies": {
         "bootstrap": "^4.3.1",
+        "browser-sync": "^2.26.5",
         "del": "^4.1.0",
-        "gulp": "^4.0.0",
+        "gulp": "^4.0.1",
         "gulp-clean-css": "^4.0.0",
         "gulp-concat": "^2.6.1",
         "gulp-env-modify": "^1.0.8",
