--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ CSS_FILE_NAME_SUFFIX = min
 JS_FILE_NAME = app
 JS_FILE_NAME_SUFFIX = min
 
-EXPORT_FOLDER_NAME = exports
+EXPORT_FOLDER_NAME = zip
 
 HTML_TEMPLATE_FILE_NAME = template
 
