--- a/package.json
+++ b/package.json
@@ -4,23 +4,11 @@
     "private": true,
     "dependencies": {
         "express": "^4.16.4",
-        "gulp-tap": "^1.0.1",
-        "react": "^16.8.6",
-        "react-dom": "^16.8.6",
-        "react-scripts": "2.1.8"
+        "gulp-tap": "^1.0.1"
     },
     "scripts": {
         "start": "node server.js"
     },
-    "eslintConfig": {
-        "extends": "react-app"
-    },
-    "browserslist": [
-        ">0.2%",
-        "not dead",
-        "not ie <= 11",
-        "not op_mini all"
-    ],
     "devDependencies": {
         "bootstrap": "^4.3.1",
         "browser-sync": "^2.26.5",
