--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
 
 # Project
-PROJECT_AUTHOR = brian tweed
-
 PROJECT_TITLE = Asset Builder
+PROJECT_IMAGE =
 ZIP_FILE_NAME = asset_builder
 
 FAVICON_IMAGE_NAME = favicon.jpg
