favicon button fix

--- a/.env
+++ b/.env
@@ -4,9 +4,9 @@ PROJECT_TITLE = Asset Builder
 PROJECT_IMAGE =
 ZIP_FILE_NAME = asset_builder
 
-FAVICON_IMAGE_NAME = favicon.jpg
-FAVICON_TILE_COLOR = #123456
-FAVICON_THEME_COLOR = #987654
+FAVICON_IMAGE_NAME = favicon.png
+FAVICON_TILE_COLOR = #262262
+FAVICON_THEME_COLOR = #262262
 
 CSS_FILE_NAME = app
 CSS_FILE_NAME_SUFFIX = min
